--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="">park-kosa.ru</a>
+                        <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/places/place-kosa.jpg" alt="изображение">
                     <article class="place__paragraphs">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
-                            горизонта &mdash; спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского
+                            горизонта &mdash; спокойного Куршского залива с одной стороны и подёрнутого рябью волн
+                            Балтийского
                             моря с другой. Уникальная природная зона на краю российского анклава.</p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для
                             путешественника и
@@ -116,7 +117,9 @@
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="">National Geographic</a>
+                        <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                            target="_blank">National
+                            Geographic</a>
                     </div>
                     <img class="place__image" src="./images/places/place-kolsky.jpg" alt="изображение">
                     <article class="place__paragraphs">
@@ -135,7 +138,8 @@
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="">Facebook</a>
+                        <a class="place__link"
+                            href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                     </div>
                     <img class="place__image" src="./images/places/place-altai.jpg" alt="изображение">
                     <article class="place__paragraphs">
@@ -145,7 +149,8 @@
                             чудом здешних мест &mdash; горным воздухом.</p>
                         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так
                             вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами
-                            летают орлы, а на равнинах пасутся косули. И знаменитые манулы &mdash; тоже обитатели Алтайского
+                            летают орлы, а на равнинах пасутся косули. И знаменитые манулы &mdash; тоже обитатели
+                            Алтайского
                             края.</p>
                     </article>
                 </li>
@@ -153,7 +158,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="">https://vk.com/baikalmile</a>
+                        <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/places/place-winter-baikal.jpg" alt="изображение">
                     <article class="place__paragraphs">
@@ -163,19 +168,21 @@
                         <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований
                             по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
                             к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
-                            года на фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд &mdash; 197.011 км/ч.</p>
+                            года на фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд &mdash;
+                            197.011 км/ч.</p>
                     </article>
                 </li>
                 <li class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="">http://vodlozero.ru/</a>
+                        <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/places/place-karelia.jpg" alt="изображение">
                     <article class="place__paragraphs">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
-                            сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров &mdash;
+                            сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров
+                            &mdash;
                             леса карельских национальных парков из-за непроходимых болот никогда не знали топора.
                             Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему
                             солнце раньше, чем увидал его Иван Грозный.
@@ -186,23 +193,27 @@
             </ul>
         </section>
 
-        <section class="cover-container">
-            <div class="cover">
-                <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на
-                    электричках.</p>
-            </div>
+        <section class="cover">
+            <a class="cover__overlay-link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+                <div class="cover__text-container">
+                    <h2 class="cover__title">До Байкала &laquo;на собаках&raquo;</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до
+                        Байкала
+                        на
+                        электричках.</p>
+                </div>
+            </a>
         </section>
 
     </main>
 
     <footer class="footer">
         <ul class="footer__links">
-            <li><a class="footer__link" href="">Карты</a></li>
-            <li><a class="footer__link" href="">Погода</a></li>
-            <li><a class="footer__link" href="">Расписание</a></li>
-            <li><a class="footer__link" href="">Календарь</a></li>
-            <li><a class="footer__link" href="">Путешествия</a></li>
+            <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">© 2020. Впишите своё имя</p>
     </footer>
