--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./vendor/normalize.css">
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -30,50 +29,53 @@
 
     <main class="content">
 
-        <section class="lead">
-            <h1 class="lead__title">Путешествия по России</h1>
-            <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <figure class="lead__image-container">
-                <img class="lead__image" src="./images/lead-image.png" alt="Путешествия по России">
-                <figcaption class="lead__caption">ваша полка &mdash; верхняя</figcaption>
-            </figure>
-        </section>
+        <div class="lead-and-intro-container">
+            <section class="lead">
+                <h1 class="lead__title">Путешествия по России</h1>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+                <figure class="lead__image-container">
+                    <img class="lead__image" src="./images/lead-image.png" alt="Путешествия по России">
+                    <figcaption class="lead__caption">ваша полка &mdash; верхняя</figcaption>
+                </figure>
+            </section>
 
-        <section class="intro">
-            <h2 class="intro__title">Чего мы там не видели?</h2>
-            <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
-                планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
-                Россия
-                &mdash;
-                это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
-                А
-                ещё
-                увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
-                Как,
-                например, Вера Башмакова &mdash; смелая молодая мама, которая взяла в охапку троих детей, усадила их в
-                свою
-                &laquo;Ладу&raquo; и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
-                интересные
-                места,
-                достойные вашего отпуска.</p>
-            <ul class="intro__list">
-                <li>
-                    <p class="intro__list-item">Часовых поясов 11</p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Природных заповедников 105</p>
-                </li>
-                <li>
-                    <p class="intro__list-item">Аэропортов 241</p>
-                </li>
-            </ul>
-        </section>
+            <section class="intro">
+                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36%
+                    планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле,
+                    Россия
+                    &mdash;
+                    это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана.
+                    А
+                    ещё
+                    увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов.
+                    Как,
+                    например, Вера Башмакова &mdash; смелая молодая мама, которая взяла в охапку троих детей, усадила их
+                    в
+                    свою
+                    &laquo;Ладу&raquo; и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые
+                    интересные
+                    места,
+                    достойные вашего отпуска.</p>
+                <ul class="intro__list">
+                    <li>
+                        <p class="intro__list-item">Часовых поясов 11</p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Природных заповедников 105</p>
+                    </li>
+                    <li>
+                        <p class="intro__list-item">Аэропортов 241</p>
+                    </li>
+                </ul>
+            </section>
+        </div>
 
 
         <section class="photo-grid">
@@ -138,8 +140,8 @@
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link"
-                            href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+                        <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                            target="_blank">Facebook</a>
                     </div>
                     <img class="place__image" src="./images/places/place-altai.jpg" alt="изображение">
                     <article class="place__paragraphs">
@@ -158,7 +160,8 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                        <a class="place__link" href="https://vk.com/baikalmile"
+                            target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/places/place-winter-baikal.jpg" alt="изображение">
                     <article class="place__paragraphs">
@@ -215,7 +218,7 @@
             <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
             <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
-        <p class="footer__copyright">© 2020. Впишите своё имя</p>
+        <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
     </footer>
 
 </body>
