--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 
     <footer class="footer">
         <ul class="footer__links">
-            <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-            <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-            <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-            <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-            <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
     </footer>
