--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                             окуная в
                             спокойствие природы и запах стального, прохладного моря.</p>
                     </article>
+                </li>
                 <li class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
@@ -212,11 +213,16 @@
 
     <footer class="footer">
         <ul class="footer__links">
-            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-            <li class="footer__link-wrapper"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-            <li class="footer__link-wrapper"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-            <li class="footer__link-wrapper"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/maps"
+                    target="_blank">Карты</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://yandex.ru/pogoda"
+                    target="_blank">Погода</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://rasp.yandex.ru"
+                    target="_blank">Расписание</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://calendar.yandex.ru"
+                    target="_blank">Календарь</a></li>
+            <li class="footer__link-wrapper"><a class="footer__link" href="https://travel.yandex.ru"
+                    target="_blank">Путешествия</a></li>
         </ul>
         <p class="footer__copyright">&copy; 2020. Впишите своё имя</p>
     </footer>
